--- a/TV_Shows/static/css/style.css
+++ b/TV_Shows/static/css/style.css
@@ -35,8 +35,8 @@ body {
 }
 
 .tablehead{
-  background-color: #510C66;
-  color:white;
+  /*background-color: #510C66;*/
+  /*color:white;*/
   padding-top: 100px;
   font-size:13px;
 }
