--- a/TV_Shows/templates/home.html
+++ b/TV_Shows/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TV Analytics</title>
+    <title>TV Viewership Summary</title>
   </head>
   <body>
     
@@ -19,6 +19,11 @@
     </script>
     
 <div class="container-fluid">
+  <div class="d-flex justify-content-between text-secondary pr-1 pl-1 data-source">
+    <div><b>Note:</b> Double Click on drilldown</div>
+    <div></div>
+    <div>Data Source: <a href='http://barcindia.co.in/'>BARC</a></div>
+  </div>
 
 <div class="row">
   <div class="col-md-6">
@@ -27,6 +32,7 @@
   <div class="card-body"> 
     <h6 class="card-title text-secondary">Top TV Channels of Different Genres</h6>
     <div id="circlechart"></div>
+   <!--  <div class="">Note: </div> -->
   </div>
 </div>
   </div>
@@ -39,7 +45,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="card-body mycontent-left" id="loaddata">
-                  <h6 class="card-title text-secondary">Top five TV shows of each Genres</h6>
+                  <h6 class="card-title text-secondary">Top Five TV Shows of Each Genres</h6>
                   <div id="donutchart">
                   </div>
                 </div>
@@ -65,6 +71,7 @@
       </div>
 
     </div>
+  <div class="card mt-2 p-2 scroll1">
     <div class="row" id="table_div">
       <div class="col-md-12 scroll" id="tableplaceholder">
       </div>
@@ -75,7 +82,7 @@
             <th scope="col">Genre</th>
             <th scope="col">ChannelName</th>
             <th scope="col">Programs</th>
-            <th scope="col">Rank</th>
+            <!-- <th scope="col">Rank</th> -->
             <th scope="col">Impressions</th>
             <th scope="col">Week</th>
             
@@ -85,10 +92,10 @@
           <% _.each(tabledata, function(row) { %>
           <tr>
             
-            <td><%= row['Genere'] %> &nbsp &nbsp &nbsp &nbsp &nbsp </td>
-            <td>&nbsp &nbsp &nbsp<%= row['Channel Name'] %></td>
+            <td><%= row['Genere'] %></td>
+            <td><%= row['Channel Name'] %></td>
             <td><%= row['Programme'] %></td>
-            <td><%= row['Rank'] %></td>
+            <!-- <td><%= row['Rank'] %></td> -->
             <td><%= row['Impressions'] %></td>
             <td><%= row['Week'] %></td>
           </tr> 
@@ -97,6 +104,7 @@
         </table>
       </script>  
     </div>
+  </div>  
 
   </div> 
 </div>
