--- a/TV_Shows/templates/template.html
+++ b/TV_Shows/templates/template.html
@@ -1,30 +1,40 @@
+{% set week_map = {
+  "18": "Apr 08, 2020 - May 13, 2020",
+  "14": "Apr 10, 2020 - Apr 15, 2020",
+  "15": "Apr 17, 2020 - Apr 22, 2020",
+  "16": "Apr 24, 2020 - Apr 29, 2020",
+  "17": "May 01, 2020 - May 06, 2020"
+  } %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>YouTube Analytics</title>
+    <title>TV Viewership Summary</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="js/jquery.min.js" type="text/javascript"></script>
+      <script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
 
-      <!-- Bootstrap CSS-->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+      <!-- Bootstrap CSS CDN -->
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
+  
       <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
       
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+      <!-- Bootstrap JS CDN -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
       <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
       <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
+      <!-- Popper JS -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
       <script src="https://d3js.org/d3.v4.min.js"></script>
       <script type="text/javascript" src="static/js/script.js"></script>
       <script type="text/javascript" src="static/js/donut.js"></script>
       <!-- <script type="text/javascript" src="static/js/table.js"></script> -->
       <script type="text/javascript" src="static/js/circlepack.js"></script>
-
       <script type="text/javascript" src=http://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
 
@@ -32,26 +42,33 @@
 
   <body>
 
-    <nav class="navbar fixed-top navbar-light bg-dark pb-2">
+    <nav class="navbar fixed-top navbar-light bg-dark pb-0 pt-1">
       <div class="d-flex flex-row">
-       <div class><h4>TV Analytics</h4></div>
+       <div class><h4>TV Viewership Summary</h4></div>
 
         <!-- Small button groups (default and split) -->
         <div class="pl-3">
-          <div class="btn-group">
-          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             {{ handler.args.get('week', 'Current Week') }}
+          <div class="btn-group dropdown-font">
+          <button class="small btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           <b> Week {{ handler.args.get('week', '18') }} :</b> {{ week_map[handler.args.get('week', '18')] }}
           </button>
           <div class="dropdown-menu">
-             <a class="dropdown-item" href=".">Current Week</a> 
 
-             {% for week in week_list %}
-                <a class="dropdown-item" href="?week={{week}}"> Week {{week}}</a>
-            {% endfor %}
+            {% for week, val in week_map.items() %}
             
+            <a class="dropdown-item" href="?week={{week}}"><b>Week {{week}} :</b> {{val}}
+              <!-- {% set count = namespace(value=14) %} -->
+
+                <!-- {{count.value}}  -->
+                <!-- {% set count.value = count.value + 1  %} -->
+            </a>
+             
+            {% endfor %}
           </div>
+
         </div>
       </div>
+
     </div>
 
     </nav>
