--- a/TV_Shows/templates/template.html
+++ b/TV_Shows/templates/template.html
@@ -42,7 +42,7 @@
 
   <body>
 
-    <nav class="navbar fixed-top navbar-light bg-dark pb-0 pt-1">
+    <nav class="navbar fixed-top navbar-light bg-dark pb-1 pt-1">
       <div class="d-flex flex-row">
        <div class><h5>TV Viewership Summary</h5></div>
 
@@ -56,12 +56,7 @@
 
             {% for week, val in week_map.items() %}
             
-            <a class="dropdown-item" href="?week={{week}}"><b>Week {{week}} :</b> {{val}}
-              <!-- {% set count = namespace(value=14) %} -->
-
-                <!-- {{count.value}}  -->
-                <!-- {% set count.value = count.value + 1  %} -->
-            </a>
+            <a class="dropdown-item" href="?week={{week}}"><b>Week {{week}} :</b> {{val}} </a>
              
             {% endfor %}
           </div>
