--- a/TV_Shows/static/css/style.css
+++ b/TV_Shows/static/css/style.css
@@ -68,6 +68,9 @@ table.dataTable tbody td:nth-child(5) {
   text-align:right;
   padding-right: 1.6rem !important;
 }
+.nav-button{
+  margin-top:0.1rem;
+}
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
