--- a/TV_Shows/templates/home.html
+++ b/TV_Shows/templates/home.html
@@ -20,7 +20,7 @@
     
 <div class="container-fluid">
   <div class="d-flex justify-content-between text-secondary pr-1 pl-1 data-source">
-    <div><b>Note:</b> Double Click on drilldown</div>
+    <div><b>Help:</b> Click on charts to drilldown or see details</div>
     <div></div>
     <div>Data Source: <a href='http://barcindia.co.in/'>BARC</a></div>
   </div>
@@ -92,7 +92,7 @@
           <% _.each(tabledata, function(row) { %>
           <tr>
             
-            <td><%= row['Genere'] %></td>
+            <td>&nbsp;&nbsp;&nbsp;<%= row['Genere'] %></td>
             <td><%= row['Channel Name'] %></td>
             <td><%= row['Programme'] %></td>
             <!-- <td><%= row['Rank'] %></td> -->
