--- a/TV_Shows/templates/home.html
+++ b/TV_Shows/templates/home.html
@@ -92,8 +92,8 @@
           <% _.each(tabledata, function(row) { %>
           <tr>
             
-            <td>&nbsp;&nbsp;&nbsp;<%= row['Genere'] %></td>
-            <td><%= row['Channel Name'] %></td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;<%= row['Genere'] %></td>
+            <td>&nbsp;&nbsp;&nbsp;<%= row['Channel Name'] %></td>
             <td><%= row['Programme'] %></td>
             <!-- <td><%= row['Rank'] %></td> -->
             <td><%= row['Impressions'] %></td>
